force-app/main/default/objects/ProjectSurveyContact__c/ProjectSurveyContact__c.object-meta.xml
<CustomObject>
    <label>Project Survey Contact</label>
    <nameField>
        <displayFormat>PSC-{0000000}</displayFormat>
        <label>Survey Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Survey Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>