force-app/main/default/objects/ProjectSurveyContact__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <label>Detractor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>