force-app/main/default/objects/ProjectSurveyContact__c/fields/Neutral__c.field-meta.xml
<CustomField>
    <fullName>Neutral__c</fullName>
    <label>Neutral</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>