force-app/main/default/objects/ProjectSurveyContact__c/fields/SendSurvey__c.field-meta.xml
<CustomField>
    <fullName>SendSurvey__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send Survey flag - indicates that the contact is to receive a survey for the project</description>
    <inlineHelpText>Checked: Send a survey for the project to the contact   Unchecked: Do not send a survey for the project to the contact</inlineHelpText>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>